# llm-plus-k8s-utils

./: .gitignore  README.md
openai-sdk-client/: README.md  _meta.py  _probe.py  common.py  config.example.json  pyproject.toml  system_prompt.txt  test_chat.py  test_response.py
s3-explorer/: .gitignore  README.md  common.py  config.example.json  explore.py  pyproject.toml
