[project]
name = "s3-explorer"
version = "0.1.0"
description = "Interactive read-only inspector for S3-compatible object stores (MinIO/Ceph/self-hosted)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.36",
    "tzdata",  # bundled IANA tz database so display_timezone/ZoneInfo works even where the OS ships none
]
